361		C++			Experimental support for EU3:IN.  Warn when attempting to use start dates that are too early.
367		C++			Support In Nomine-style three-part dates.
376		C++			Use the parser to grab province data instead of doing it manually.  Hopefully fixes AHD Baltimore.
378		C++			Get more localizations (including AHD ones).
379		C++			Automated test scripts now test against multiple config files.
380		C++			AHD unciv nations now get research points for reforms instead of techs.
381		C++			Document "EU3gametype = in" setting in configuration.txt.
383		C++			School reforms for AHD.
386		C++			Inca culture maps to Quechua, not Tarascan (the Tarascan people are from modern Mexico)
388		C++			Tiny mistake in readme fixed.
390		C++			Unciv nations get reforms.
392		C++			Unciv reforms fire proper effects.
394		C++			Bill of Rights NI reduces slaves by 10%
395		C++			Upper House determined by sliders.
421		C++			Incorporate better political party code.
422		C++			Build unit strengths on the fly from the EU3 folder if unit_strength.txt doesn't exist, and remove it by default.  Should make converting from mods easier.
424		C++			Pop idealogies determined by upper house
425		C++			Pop issues from political parties
426		C++			Correctly detect IN 3.2 saves
434		C++			Allow the parser to skip sets of empty braces (EU3 seems to stick them in occasionally).
435		C++			Don't crash when encountering a cored province with no owner.
437		C++			Allow comments that have no comment text, just a # by itself.
438		C++			Use forward declarations instead of #includes in EU3World
439		C++			Move files around
440		C++			Make log.txt easier to read
443		C++			Use forward declarations instead of #includes in V2World
444		C++			Update data files for new countries in 2.31
447		C++			No capitalists, clerks, or craftsmen in unciv nations
448		C++			Refactor EU3 Province
449		C++			Change removal of dead landless nations to use pop ratios instead of majority culture